# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  pyproject.toml  sonar-project.properties
.github/workflows/: my_workflow.yml  sonarqube.yml
formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/: cli.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/json/: test.py
gendiff/scripts/: gendiff.py  generate_diff.py  parser.py
test/: test_generate_diff.py
tests/: test_cli.py  test_formatters.py  test_generate_diff.py  test_scripts.py
tests/test_data/: test_json.py  test_yml.py
