[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asciinema>=2.4.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
